# ellier

./: .dockerignore  .gitignore  Cargo.toml  deploy.sh  erish-0.1.0.tgz  erish-0.1.1.tgz  erish-0.1.2.tgz  erish-0.1.3.tgz  erish-0.2.0.tgz  erish-0.2.1.tgz  erish-0.2.3.tgz  index.yaml  prev_index.yaml  readme.md  release.sh
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  serviceaccount.yaml
chart/templates/encoder/: statefulset.yaml  storage.yaml
chart/templates/server/: deployment.yaml  service.yaml
encoder/: .dockerignore  Cargo.toml  Dockerfile
encoder/src/: config.rs  ffmpeg.rs  ffprobe.rs  lib.rs  main.rs  time.rs
server/: Cargo.toml  Dockerfile  build.rs
server/src/: main.rs
src/: config.rs  error.rs  ffmpeg.rs  ffprobe.rs  lib.rs  main.rs  time.rs
