[package]
name = "ellier"
version = "0.1.0-alpha1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "signal",
] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path = { git = "https://github.com/syrflover/serde_path", tag = "0.4.1" }
http = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
thiserror = "1.0"
serde_qs = "0.12"
mime = "0.3"
bytes = "1.5"
nix = { version = "0.28", features = ["signal"] }
chzzk = { git = "https://github.com/syrflover/chzzk-rs", rev = "489f6d1" }
chrono = "0.4"
time = { version = "0.3", features = ["local-offset", "macros"] }
tap = "1.0"
dotenv = "0.15"

# serde_path = { path = "../serde_path" }
# chzzk = { path = "../chzzk" }

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
